--- a/module/Application/view/application/templates/cl-api-template.phtml
+++ b/module/Application/view/application/templates/cl-api-template.phtml
@@ -25,9 +25,9 @@
 /*******************************************************************/
 /*                                                                 */
 /*   Modifications:                                                */
-//   Change ID  Change Date Change Description                     */
-//   ---------  ----------  ---------------------------------------*/
-//     <?= $githubIssueNumber ?>    <?= $currentDate->format('Y-m-d') ?>  Initially written.                     */
+/*   Change ID  Change Date Change Description                     */
+/*   ---------  ----------  ---------------------------------------*/
+/*     <?= $githubIssueNumber ?>    <?= $currentDate->format('Y-m-d') ?>  Initially written.                     */
 /*                                                                 */
 /*******************************************************************/
 /*                                                                 */
