--- a/module/Application/view/application/templates/ts-api-template.phtml
+++ b/module/Application/view/application/templates/ts-api-template.phtml
@@ -34,15 +34,7 @@
 /*                                                                 */
 /*******************************************************************/
 
-PGM        PARM(<?php
-$count = 0;
-foreach ($parameters as $parameter) {
-    if (($count > 0) && ($count % 5 == 0)) {
-        echo "+\n                ";
-    }
-    echo "&" . strtoupper($parameter['parameterName']) . ' ';
-    $count++;
-} ?>)
+PGM
 
 /*******************************************************************/
 /*   Copyrights                                                    */
@@ -69,17 +61,7 @@ foreach ($parameters as $parameter) {
     echo substr($spaces, strlen($parameter['description']), (61-strlen($parameter['description'])));
     echo "*/" . "\n";  // 61 chars between asterisks
     echo "DCL      ";
-    echo "VAR(&" . strtoupper($parameter['parameterName']) . ") TYPE(";
-    if (str_contains($parameter['dataType'], 'Char')) {
-        echo "*CHAR";
-    } else {
-        echo "*DEC";
-    }
-    echo ") ";
-
-    echo "LEN(";
-    echo $parameter['length'] . ' ' . $parameter['precision'];
-    echo ") VALUE()";
+    echo $parameter['clDefinition'];
     echo "\n\n";
 
     $count++;
@@ -98,13 +80,13 @@ MONMSG     MSGID(CPF0000)
 CALL       PGM(AC_<?= $apiRootName ?>) PARM(<?php
 $count = 0;
 foreach ($parameters as $parameter) {
-    if ($parameter['parameterName'] === 'k3sobj') {
-        continue;
+    if ($count > 0) {
+        echo ' ';
     }
     if (($count > 0) && ($count % 5 == 0)) {
         echo "+\n                ";
     }
-    echo "&" . strtoupper($parameter['parameterName']) . ' ';
+    echo "&" . strtoupper($parameter['parameterName']);
     $count++;
 } ?>)
 
